<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout1"
        android:padding="16dp"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/btnprinedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/principal"
            android:onClick="iraprincipalOnClickHandler" />

        <Button
            android:id="@+id/btneditpaedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editor"
            android:onClick="iraeditarOnClickHandler" />

        <Button
            android:id="@+id/btntablaedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabla_posiciones" 
            android:onClick="iratablaOnClickHandler" />

        <Button
            android:id="@+id/btnsaliredi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:text="@string/salir"
            android:onClick="irasalirOnClickHandler" />

    </LinearLayout>

</RelativeLayout>