<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NuevoActivity" >

    <EditText
        android:id="@+id/txttitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lbltitulo"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lbltitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txttitulo"
        android:layout_alignParentTop="true"
        android:text="@string/lbl1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/btnagregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txttitulo"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txttitulo"
        android:layout_marginTop="15dp"
        android:text="@string/add" />

    <TextView
        android:id="@+id/lbljugadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnagregar"
        android:layout_below="@+id/btnagregar"
        android:layout_marginTop="14dp"
        android:text="@string/lbl2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/listJugadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnsiguiente"
        android:layout_alignLeft="@+id/lbljugadores"
        android:layout_below="@+id/lbljugadores" >

    </ListView>

    <Button
        android:id="@+id/btnsiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/listJugadores"
        android:text="@string/siguiente" />

</RelativeLayout>
